# watchlog

./: .env.template  .gitignore  Dockerfile  Justfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/src/__tests__/components/feed/: FriendActivityCard.test.tsx  FriendActivityFeed.test.tsx  HeroSection.test.tsx  MovieCard.test.tsx  TrendingGrid.test.tsx
frontend/src/__tests__/components/ui/: Badge.test.tsx  (+2 more)
frontend/src/__tests__/pages/: DiscoverPage.test.tsx  FeedPage.test.tsx  GroupsPage.test.tsx  ListsPage.test.tsx
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/components/feed/: FriendActivityCard.tsx  FriendActivityFeed.tsx  HeroSection.tsx  MovieCard.tsx  TrendingGrid.tsx
frontend/src/components/layout/: AtmosphericBackground.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/sidebar/: AchievementBadge.tsx  AchievementsGrid.tsx  GroupCard.tsx  GroupsSidebar.tsx  StatsCard.tsx
frontend/src/components/ui/: Badge.tsx  SearchBar.tsx  StarRating.tsx
frontend/src/data/: mock-data.ts
frontend/src/types/: index.ts
src/: entrypoint.sh  manage.py
src/core/: views.py
src/groups/: models.py  tests.py  views.py
src/movies/: models.py  views.py
src/movies/tests/: test_imdb.py  test_request_limiter.py  test_views.py
src/templates/: base.html  core.html
src/user/: forms.py  views.py
src/watchlog/: asgi.py  urls.py  wsgi.py
src/watchlog/settings/: __init__.py  base.py  dev.py  prod.py
(+12 files in other folders)
